charts/synapse/tests/golden/fixtures/test-ingress-msc4306.golden.yaml
---
# Source: synapse/templates/synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  
  annotations: 
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "320"
    nginx.org/client-max-body-size: 50m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - NOT-CONFIGURED
  rules:
  - host: NOT-CONFIGURED
    http:
      paths:
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/(account/3pid/|directory/list/room/|rooms/[^/]+/(forget|upgrade|report)|register)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-master
      - path: /_matrix/client/(unstable|v1)/org.matrix.msc4108/rendezvous$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-master
      - path: /_synapse/client/rendezvous$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-master
      - path: /_matrix/federation/v[12]/(?:state_ids|get_missing_events)/(?:%21|!)(?<room>[A-Za-z0-9._=\-\/]+)(:|%3A)[A-Za-z0-9.\-]+
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/(?:%21|!)[A-Za-z0-9._=\-]+(?::|%3[Aa])[A-Za-z0-9.\-]+/typing
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-typing
      - path: /_matrix/client/(r0|v3|unstable)/sendToDevice/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-to-device
      - path: /_matrix/client/(r0|v3|unstable)/.*/tags
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-account-data
      - path: /_matrix/client/(r0|v3|unstable)/.*/account_data
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-account-data
      - path: /_matrix/client/(r0|v3|unstable)/rooms/(?:%21|!)[A-Za-z0-9._=\-]+(?::|%3[Aa])[A-Za-z0-9.\-]+/receipt
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-receipts
      - path: /_matrix/client/(r0|v3|unstable)/rooms/(?:%21|!)[A-Za-z0-9._=\-]+(?::|%3[Aa])[A-Za-z0-9.\-]+/read_markers
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-receipts
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/presence/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-presence
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/pushrules/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-push-rules
      - path: /_matrix/client/(r0|v3|unstable)/delete_devices$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-device-lists
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/devices(/|$)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-device-lists
      - path: /_matrix/client/(r0|v3|unstable)/keys/upload(/|$)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-device-lists
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/keys/device_signing/upload$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-device-lists
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/keys/signatures/upload$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-device-lists
      - path: /_matrix/client/unstable/io.element.msc4306/rooms/.*/thread/.*/subscription$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-thread-subscriptions
      - path: /_matrix/client/unstable/io.element.msc4308/thread_subscriptions$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-thread-subscriptions
      - path: /_matrix/client/.*(?:%21|!)[A-Za-z0-9._=/-]+(?::|%3[Aa])[A-Za-z0-9.-]+.*$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            # !
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/(sync|events|initialSync|rooms/[^/]+/initialSync)$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            # !
            name: synapse-client-reader-envoy
      - path: /_matrix/client/unstable/org.matrix.simplified_msc3575/sync$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            # !
            name: synapse-client-reader-envoy
      - path: /_matrix/client/versions$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(r0|v3|unstable)/notifications$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(r0|v3|unstable)/room_keys/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(r0|v3|unstable)/keys/(query|changes|claim)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/unstable/org.matrix.msc3814.v1/dehydrated_device$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/unstable/org.matrix.msc3814.v1/dehydrated_device/[^/]*/events$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/(joined_members|context/.*|members|state|hierarchy|relations/|event/|aliases|timestamp_to_event|redact|send|state/|(join|invite|leave|ban|unban|kick))
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/(createRoom|publicRooms|voip/turnServer|joined_rooms|search|directory/room/.*|capabilities)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/user/.*/filter(/|$)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/unstable/org.matrix.msc4143/rtc/transports$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/profile/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/account/(3pid|whoami|deactivate)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/(federation/(v1|v2)(?!/(media|openid))|key/v2)/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-client-reader-envoy
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/login/sso/redirect(/|$)
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: matrix-authentication
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/login$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: matrix-authentication
      - path: /_matrix/client/(api/v1|r0|v3|unstable)/logout(/all)?$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: matrix-authentication
      - path: /_matrix/client/(r0|v3|unstable)/refresh$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: matrix-authentication
      - path: /_matrix/client/(r0|v3|unstable)/user_directory/search$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-user-dir
      - path: /_matrix/media/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_matrix/client/v1/media/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_matrix/federation/v1/media/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_synapse/admin/v1/purge_media_cache$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_synapse/admin/v1/room/.*/media.*$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_synapse/admin/v1/user/.*/media.*$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_synapse/admin/v1/media/.*$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_synapse/admin/v1/quarantine_media/.*$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_synapse/admin/v1/users/.*/media$
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-media-repository
      - path: /_matrix/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-master
      - path: /_synapse/
        pathType: ImplementationSpecific
        backend:
          service:
            port:
              number: 80
            name: synapse-master
